# cloudeasyfiles

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT.md  README.md  SECURITY.md  package-lock.json  package.json  rust-toolchain.toml  vite.config.ts  vitest.config.ts
.githooks/: pre-commit
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_issue.yml  feature_request.yml
.github/workflows/: ci.yml  publish-release.yml  release-build.yml
docs/: CNAME  index.html  robots.txt  sitemap.xml
docs/architecture/: domain-model.md  navigation-model.md  overview.md  search-and-filter.md  storage-abstraction.md
docs/branding/: README.md
docs/decisions/: ADR-001-no-objects-in-tree.md  ADR-002-local-filter-and-advanced-search.md  ADR-003-provider-abstraction-with-real-limitations.md  ADR-004-incremental-explorer-listing-and-normalized-counts.md  ADR-005-hybrid-folder-representation-for-object-storage.md  ADR-006-provider-specific-restore-with-no-local-history.md
docs/page/: index.html  site.css  site.js
docs/product/: principles.md  roadmap.md  vision.md
docs/releases/: 0.1.0.md  0.2.0.md  0.2.3.md
docs/reviews/: provider-cost-safety-review.md
docs/testing/: README.md  coverage-expansion-plan.md  coverage-expansion-progress.md  refactoring-and-coverage-plan.md
features/advanced-search/: implementation-plan.md  spec.md
features/azure-support/: implementation-plan.md
features/central-listing/: implementation-plan.md  spec.md
features/download-management/: spec.md
features/file-preview/: implementation-plan.md
features/file-restore/: implementation-plan.md  spec.md
features/folder-navigation/: implementation-plan.md  spec.md
features/simple-filter/: implementation-plan.md  spec.md
features/simple-upload/: implementation-plan.md  spec.md
scripts/: build-installers.sh  check-rust-coverage.mjs
src/: i18n.js  index.html  main.js  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/linux/: com.alps.cloudeasyfiles.desktop  com.andre.cloudeasyfiles.desktop  desktop-template.hbs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: bootstrap.rs  mod.rs  window_state.rs
src-tauri/src/application/services/: aws_connection_secret_service.rs  aws_connection_service.rs  azure_connection_secret_service.rs  azure_connection_service.rs  greeting_service.rs  mod.rs
src-tauri/src/domain/: aws_connection.rs  azure_connection.rs  connection_secrets.rs  greeting.rs  mod.rs
src-tauri/src/presentation/: commands.rs
src/app/: App.test.tsx  App.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  providers.test.tsx  providers.tsx
src/features/aws/: awsProviderContent.test.ts  awsProviderContent.ts
src/features/aws-restore/: AwsRestoreRequestPanel.test.tsx  AwsRestoreRequestPanel.tsx
src/features/azure/: azureProviderContent.test.ts  azureProviderContent.ts
src/features/azure-restore/: AzureRehydrationRequestPanel.test.tsx  AzureRehydrationRequestPanel.tsx
src/features/connections/: awsUploadStorageClasses.ts  azureUploadTiers.ts  models.ts
src/features/navigation/: ConnectionNavigator.test.tsx  ConnectionNavigator.tsx  navigationActionDispatch.test.ts  navigationActionDispatch.ts  navigationCacheState.test.ts  navigationCacheState.ts  navigationConnectionState.test.ts  navigationConnectionState.ts  navigationContent.test.ts  navigationContent.ts  navigationDerivedState.test.ts  navigationDerivedState.ts  navigationDownloads.test.ts  navigationDownloads.ts  navigationErrorUtils.ts  navigationFileInput.test.ts  navigationFileInput.ts  navigationFilePreview.test.ts  navigationFilePreview.ts  navigationFormatting.ts  navigationGuards.test.ts  navigationGuards.ts  navigationItemGuards.ts  navigationLoading.test.ts  navigationLoading.ts  navigationModalGuards.test.ts  navigationModalGuards.ts  navigationModalState.test.ts  navigationModalState.ts  (+29 more)
src/locales/: en-US.json  pt-BR.json
(+57 files in other folders)
