[package]
name = "cloudeasyfiles"
version = "0.1.0"
description = "Unified desktop file explorer for AWS S3 and Azure Blob Storage."
authors = ["Andre Luiz Pires Silva"]
license = "MIT"
repository = "https://github.com/andre-luiz-pires-silva/cloudeasyfiles"
edition = "2021"
rust-version = "1.77"

[package.metadata]

[lib]
name = "cloudeasyfiles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
