[package]
name = "cloudeasyfiles"
version = "0.1.0"
description = "Unified desktop file explorer for AWS S3 and Azure Blob Storage."
authors = ["Andre Luiz Pires Silva"]
license = "MIT"
repository = "https://github.com/andre-luiz-pires-silva/cloudeasyfiles"
edition = "2021"
rust-version = "1.88.0"

[package.metadata]

[lib]
name = "cloudeasyfiles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.0.2", features = [] }
tauri-codegen = { version = "=2.0.2", default-features = false }
tauri-utils = { version = "=2.0.2", features = ["build"] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "=2.0.6", features = [] }
tauri-macros = { version = "=2.0.2" }
tauri-runtime = { version = "=2.1.1" }
tauri-runtime-wry = { version = "=2.1.2", default-features = false }
tauri-utils = { version = "=2.0.2", features = ["resources"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
