[package]
name = "cloudeasyfiles"
version = "0.1.0"
description = "Unified desktop file explorer for AWS S3 and Azure Blob Storage."
authors = ["Andre Luiz Pires Silva"]
license = "MIT"
repository = "https://github.com/andre-luiz-pires-silva/cloudeasyfiles"
edition = "2021"
rust-version = "1.88.0"

[package.metadata]

[lib]
name = "cloudeasyfiles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.0.2", features = [] }
tauri-codegen = { version = "=2.0.2", default-features = false }
tauri-utils = { version = "=2.0.2", features = ["build"] }

[dependencies]
aws-config = { version = "=1.8.13", features = ["behavior-version-latest"] }
aws-credential-types = "=1.2.11"
aws-sdk-s3 = "=1.97.0"
aws-sdk-sts = "=1.97.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
hmac = "0.12"
quick-xml = { version = "0.37", features = ["serialize"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
percent-encoding = "2.3.1"
tauri = { version = "=2.0.6", features = [] }
tauri-macros = { version = "=2.0.2" }
tauri-plugin-dialog = "2.0.1"
tauri-runtime = { version = "=2.1.1" }
tauri-runtime-wry = { version = "=2.1.2", default-features = false }
tauri-utils = { version = "=2.0.2", features = ["resources"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "time"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = ["linux-native-sync-persistent", "crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }
